Ultima revisão antes da entrega pra banca

--- a/ape-conjuntos.tex
+++ b/ape-conjuntos.tex
@@ -1,7 +1,7 @@
 \chapter{Gráficos das Execuções do Experimento}
 \label{ape:graphics}
 
-%Aqui são mostrados os gráficos de cada uma das repetições dos experimentos, para os dois algoritmos de balanceamento de carga.
+Aqui são mostrados gráficos obtidos a partir dos resultados de cada uma das dez execuções do experimento de avaliação de desempenho do \texttt{CEP Handler}, sistema de processamento de eventos complexos nativo de nuvem  desenvolvido neste trabalho. A legenda das figuras explicam quais são as métricas de desempenho representadas nos gráficos. A descrição do experimento pode ser encontrada no Capítulo \ref{cap:experimento} e a análise dos resultados no Capítulo \ref{cap:resultados}. 
 
 %colocar todas as figuras do mesmo algoritmo na mesma pagina
 %\section{Experimento 1 - Algoritmo de Uso de Estado}
