--- a/cap-conceitos.tex
+++ b/cap-conceitos.tex
@@ -58,7 +58,7 @@ Existem três tipos de entidades principais relacionados a CEP: \\
 
 \textbf{Consumidores de Eventos} \index{EventConsumer}são responsáveis por receber eventos do sistema e repassar os dados sobre tais eventos para as partes interessadas no mundo exterior. Esses dados podem ser repassados na forma de notificações a usuários ou atuadores no mundo real. Consumidores e produtores de eventos não fazem parte do sistema de CEP em si, mas são abstrações para entidades externas que interagem com o sistema. \\
 
-\textbf{Processadores de Eventos} \index{EPA-EventProcessingAgent} (EPAs, do inglês \textit{Event Processing Agents}) são as entidades que realmente compõem o sistema de CEP. Cada EPA é responsável por aplicar um ou mais operadores nos eventos recebidos e emitir novos eventos ou repassar eventos que foram filtrados. Quando vários EPAs são conectados, de forma que os eventos resultantes do processamento de um EPA são enviados diretamente a outro, forma-se uma \textbf{Rede de Processamento de Eventos} \label{EPN} (\textit{EPN}, do inglês \textit{Event Processing Network}).\index{EPN-EventProcessingNetwork} \\
+\textbf{Processadores de Eventos} \index{EPA-EventProcessingAgent} (EPAs, do inglês \textit{Event Processing Agents}) são as entidades que realmente compõem o sistema de CEP. Cada EPA é responsável por aplicar um ou mais operadores nos eventos recebidos e emitir novos eventos ou repassar eventos que foram filtrados. Quando vários EPAs são conectados, de forma que os eventos resultantes do processamento de um EPA são enviados diretamente a outro, forma-se uma \textbf{Rede de Processamento de Eventos} \label{EPN} (EPN, do inglês \textit{Event Processing Network}).\index{EPN-EventProcessingNetwork} \\
 
 %\todo[inline]{Sempre que possível, traduza os termos para o português: Produtores de Eventos, Consumidores de Eventos, Processadores de Eventos e Rede de Processamento de Eventos me parecem boas traduções para as definições acima.}
 %Concordo plenamente com a tradução dos termos, mas mantive as siglas em inglês.
@@ -337,8 +337,8 @@ Por exemplo, caso o único tipo de evento relevante fosse o do tipo \textit{Posi
 \begin{itemize}
 \item \textbf{Padrões Básicos}: são os que não dependem da ordem dos eventos de entrada. Podem ser de quatro subtipos:
 \begin{itemize}
-\item \textbf{Padrões de Operadores Lógicos} \emph{(ALL, ANY, ABSENCE)} verificam se existem eventos de cada tipo da lista de tipos de eventos relevantes no conjunto de Eventos Participantes. \emph{ALL} verifica se há um de cada tipo, \emph{ANY} verifica se há eventos de pelo menos um tipo e \emph{ABSENCE} verifica se não há nenhum evento dos tipos da lista. O conjunto de reconhecimento é composto por todos os eventos que respeitam o padrão, ou seja, todos os eventos em \emph{ALL}, apenas os eventos que foram detectados em \emph{ANY} e nenhum evento em \emph{ABSENCE}.
-Utilizando os Exemplos \ref{exemploEvento} e \ref{exemploEventoChuva}, caso a lista de eventos relevantes contivesse os tipos de eventos dos dois exemplos, mas os eventos relevantes fossem somente os do Exemplo \ref{exemploEventoChuva}, poderia se detecar um evento de \textit{CarroSeco} caso utilizasse o operador \emph{ABSENCE} num fluxo que recebesse eventos dos dois tipos
+\item \textbf{Padrões de Operadores Lógicos} \emph{(all, any, absence)} verificam se existem eventos de cada tipo da lista de tipos de eventos relevantes no conjunto de Eventos Participantes. \emph{All} verifica se há um de cada tipo, \emph{any} verifica se há eventos de pelo menos um tipo e \emph{absence} verifica se não há nenhum evento dos tipos da lista. O conjunto de reconhecimento é composto por todos os eventos que respeitam o padrão, ou seja, todos os eventos em \emph{all}, apenas os eventos que foram detectados em \emph{any} e nenhum evento em \emph{absence}.
+Utilizando os Exemplos \ref{exemploEvento} e \ref{exemploEventoChuva}, caso a lista de eventos relevantes contivesse os tipos de eventos dos dois exemplos, mas os eventos relevantes fossem somente os do Exemplo \ref{exemploEventoChuva}, poderia se detecar um evento de \textit{CarroSeco} caso utilizasse o operador \emph{absence} num fluxo que recebesse eventos dos dois tipos
 %~\todo{Esse exemplo não parece correto. O evento CarroSeco de saída deveria ser gerado em resposta à entrada de um evento de localização de carro, certo? Mas com ABSENCE, isso nunca aconteceria. --- Se a lista de eventos participantes contivesse somente os eventos de chuva e não os eventos de veiculos, então a chegada de um evento de veiculo sem a presença de um evento de chuva no periodo de agregação poderia disparar um evento de carro seco }.
 
 
@@ -371,7 +371,7 @@ Um possível uso deste padrão seria detectar se eventos de \textit{Posição} d
 %\todo{Não há nenhuma referência bibliográfica citada nesta seção. É preciso incluir referências.}
 
 Em alguns casos, a detecção de eventos é feita de acordo com o contexto no qual o evento está sendo avaliado. Processar os eventos por contexto ajuda a avaliar as informações que cada evento traz ao sistema ao ser inserido. Contexto é definido em CEP como a característica que diferencia eventos do mesmo tipo~\citep{Etzion:2010:EPA:1894960}. Tecnicamente, significa separar o eventos de entrada de um mesmo tipo em partições que possuem atributos similares.   %\todo{Mas o que é um contexto? Você não definiu!}
-A partir do Exemplo~\ref{exemploEvento}, é possível usar contexto para separar os eventos do tipo \textit{Posição} utilizando o atributo \textit{veículo} como característica de separação, onde cada valor distinto de \textit{veículo} leva à criação de uma partição de contexto diferente, na qual todos os eventos com o mesmo valor para esse atributo são inseridos. Neste caso, existem dois possíveis valores de \textit{veículo} (\textit{Carro} e \textit{Ônibus}), o que leva à criação de uma partição apenas para eventos \textit{Posição} de carros e outra apenas para eventos \textit{Posição} de ônibus.  Qualquer operador que use contexto é aplicado a cada partição separadamente, de forma que eventos de entrada em uma partição não influenciam o processamento em outras partições%\todo{essa última frase está mesmo correta? um mesmo evento pode ser entrada de mais de uma partição, como descrito mais adiante no texto, em Intervalo Fixo Deslizante. - sim, este é basicamente como funciona o termo group by em EPL do ESPER}.
+A partir do Exemplo~\ref{exemploEvento}, é possível usar contexto para separar os eventos do tipo \textit{Posição} utilizando o atributo \textit{veículo} como característica de separação, onde cada valor distinto de \textit{veículo} leva à criação de uma partição de contexto diferente, na qual todos os eventos com o mesmo valor para esse atributo são inseridos. Neste caso, existem dois possíveis valores de \textit{veículo} (\textit{Carro} e \textit{Ônibus}), o que leva à criação de uma partição apenas para eventos \textit{Posição} de carros e outra apenas para eventos \textit{Posição} de ônibus.  Qualquer operador que use contexto é aplicado a cada partição separadamente, de forma que eventos de entrada em uma partição não influenciam o processamento em outras partições%\todo{essa última frase está mesmo correta? um mesmo evento pode ser entrada de mais de uma partição, como descrito mais adiante no texto, em Intervalo Fixo Deslizante. - sim, este é basicamente como funciona o termo group by em EPL do Esper}.
 
 %Cada contexto cria partições onde eventos que estão naquela partição só são agregados com eventos da mesma partição \todo{frase horrível}.
 Alguns operadores, como agregação e composição, lidam com mais de um evento de entrada por detecção. Dessa forma, eles necessariamente usam um contexto para separar os eventos de entrada que serão considerados para realizar cada detecção.
@@ -432,7 +432,7 @@ O uso de estado na detecção de eventos está fortemente ligado ao contexto esc
 \subsection{Principais Ferramentas}
 \label{sec:mainsoftwares}
 
-Existem várias implementações de sistemas de processamento de eventos complexos disponíveis. As ferramentas mais populares na atualidade são: a WSO2 Siddhi CEP ~\citep{WSO2}, a TIBCO~\citep{TIBCO},  a Esper~\citep{Esper}, a Red Hat Drools Fusion~\citep{DroolsFusion}, a Informatica RulePoint~\citep{Informatica} e a Apache Flink~\citep{Flink}, sendo que a principal diferença entre elas é o tipo de linguagem utilizado para a definição dos eventos. Segundo \cite{Margara:2011:PFI:2002259.2002307}, as linguagens para CEP podem ser classificadas como linguagens orientadas a fluxos ou linguagens orientadas a regras. 
+Existem várias implementações de sistemas de processamento de eventos complexos disponíveis. As ferramentas mais populares na atualidade são: a WSO2 Siddhi CEP, a TIBCO,  a Esper, a Red Hat Drools Fusion, a Informatica RulePoint e a Apache Flink \footnote{TIBCO : \url{https://www.tibco.com/products/tibco-businessevents}, Apache Flink \url{https://flink.apache.org}, Siddhi \url{https://github.com/wso2/siddhi}, Informatica: \url{https://network.informatica.com/community/informatica-network/products/complex_event_processing/}, DroolsFusion : \url{https://www.drools.org/}, Esper : \url{https://www.espertech.com/esper/}}, sendo que a principal diferença entre elas é o tipo de linguagem utilizado para a definição dos eventos. Segundo \cite{Margara:2011:PFI:2002259.2002307}, as linguagens para CEP podem ser classificadas como linguagens orientadas a fluxos ou linguagens orientadas a regras. 
 
 Eventos definidos em linguagens orientadas a regras, também chamadas de regras Evento-Condição-Ação (ECA), devem necessariamente conter três informações:
 
@@ -444,7 +444,7 @@ Eventos definidos em linguagens orientadas a regras, também chamadas de regras 
 
 
 
-Em contraste, eventos definidos em linguagens orientadas a fluxos se baseiam fortemente na sintaxe da linguagem SQL, utilizada por sistemas gerenciadores de banco de dados  relacionais, com a principal diferença de que, como os tipos de eventos ficam continuamente produzindo novos resultados, a saída de um tipo de evento pode ser usada diretamente como entrada em outro tipo de evento, o que não é comum em SQL.
+Em contraste, eventos definidos em linguagens orientadas a fluxos se baseiam fortemente na sintaxe da linguagem SQL (\textit{Structured Query Language}), utilizada por sistemas gerenciadores de banco de dados  relacionais, com a principal diferença de que, como os tipos de eventos ficam continuamente produzindo novos resultados, a saída de um tipo de evento pode ser usada diretamente como entrada em outro tipo de evento, o que não é comum em SQL.
 
 
 
@@ -452,7 +452,7 @@ Em contraste, eventos definidos em linguagens orientadas a fluxos se baseiam for
 %\todo[inline]{Você fala de stream nos parágrafos acima, mas  não define o que é isso.}
 
 O Exemplo~\ref{ECAruleexample} mostra como uma regra ECA pode ser definida na ferramenta Drools Fusion e o Exemplo \ref{EPLexample} mostra uma definição de evento feita em \textit{Event Processing Language} (EPL) pela ferramenta Esper. Ambos definem que, na ocorrência de um evento do tipo \textit{Posição}, deve-se  verificar se as coordenadas do evento se encontram perto do prédio do Centro de Competência em Software Livre (CCSL) do IME-USP. Assim, os eventos \textit{VeículosPertoDoCCSL} só serão enviados caso essa condição seja satisfeita.
-Além da ESPER, a Siddhi CEP e a TIBCO também utilizam linguagens orientadas a fluxos para a definição de eventos em seus respectivos sistemas. Já a Drools Fusion e a RulePoint utilizam linguagens orientadas a regras. 
+Além da Esper, a Siddhi CEP e a TIBCO também utilizam linguagens orientadas a fluxos para a definição de eventos em seus respectivos sistemas. Já a Drools Fusion e a RulePoint utilizam linguagens orientadas a regras. 
 A Apache Flink, em contraste com as outras abordagens apresentadas, implementa os operadores como funções diretamente nas linguagens de programação suportadas como cliente pelo programa (Java e Scala). %\todo{Faltou falar qual é o tipo de linguagem do Flink  }.
 %\todo[inline]{Fernando, no exemplo 7, VeículosPertoDoCCSL é o nome da regra; a ação da regra é apenas um print. Toda regra cuja ação é satisfeita gera um evento que tem como tipo o nome da regra? Se não for assim, então, no lugar do print, não deveria haver alguma ação que cria um novo evento do tipo VeículosPertoDoCCSL?}
 %Chequei e realmente é preciso colocar um Insert no Then para que o evento seja enviado como "VeículoPertodoCCSL"
@@ -473,7 +473,7 @@ END
 \label{ECAruleexample}
 \end{evento}
 
-\begin{evento}[b]
+\begin{evento}[h]
 \begin{verbatim}
 SELECT * as VeículosPertoDoCCSL
 FROM Posição
@@ -489,19 +489,19 @@ Processamento de Fluxos de Dados Contínuos (do termo inglês \textit{Stream Pro
 \subsection{Distribuição de Processamento das Ferramentas de \textit{Software} Livre}
 \label{sub-sec:opensourcetoolsdistribution}
 
-As ferramentas de CEP de \textit{software} livre -- Apache Flink, Drools Fusion, Esper e Siddhi -- possuem organização, arquitetura e origens distintas. A Apache Flink é uma ferramenta criada para processar fluxos de dados contínuos em tempo real em ambientes distribuídos. Sua capacidade de processar eventos vem do fato de a ferramenta disponibilizar o uso de todos os operadores de CEP. Porém, isso só pode ser feito utilizando os operadores de CEP como funções das linguagems de programação suportadas (Java e Scala)%\todo{Aqui, dá para explicar melhor. Para um leitor que não conhece o Flink, não está claro o que significa "usar a API no código". Que código?}
-, a ferramenta não disponibiliza nenhuma das linguagens mencionadas anteriormente para definição de eventos~\citep{FlinkCEP}.
+As ferramentas de CEP de \textit{software} livre -- Apache Flink, Drools Fusion, Esper e Siddhi -- possuem organização, arquitetura e origens distintas. A Apache Flink\footnote{\url{https://flink.apache.org}} é uma ferramenta criada para processar fluxos de dados contínuos em tempo real em ambientes distribuídos. Sua capacidade de processar eventos vem do fato de a ferramenta disponibilizar o uso de todos os operadores de CEP. Porém, isso só pode ser feito utilizando os operadores de CEP como funções das linguagems de programação suportadas (Java e Scala)%\todo{Aqui, dá para explicar melhor. Para um leitor que não conhece o Flink, não está claro o que significa "usar a API no código". Que código?}
+, a ferramenta não disponibiliza nenhuma das linguagens mencionadas anteriormente para definição de eventos.
 
-A ferramenta Drools Fusion foi imaginada inicialmente como um Sistema para Processamento de Regras de Negócio, que é utilizado por companhias para administrar o funcionamento correto de processos internos empresariais. O processamento de eventos complexos foi uma característica adicionada tempos depois, com o propósito de tornar a aplicação Drools em um sistema completo para modelagem de comportamento. A ferramenta em si é uma aplicação monolítica que não fornece meios para distribuir seu processamento nativamente~\citep{DroolsFusion}. %\todo{Incluir referência bibliográfica}.
+A ferramenta Drools Fusion\footnote{\url{https://www.drools.org/}} foi imaginada inicialmente como um Sistema para Processamento de Regras de Negócio, que é utilizado por companhias para administrar o funcionamento correto de processos internos empresariais. O processamento de eventos complexos foi uma característica adicionada tempos depois, com o propósito de tornar a aplicação Drools em um sistema completo para modelagem de comportamento. A ferramenta em si é uma aplicação monolítica que não fornece meios para distribuir seu processamento nativamente. %\todo{Incluir referência bibliográfica}.
 
-A Esper é uma das ferramentas de CEP que oferecem linguagens orientadas a fluxo para a definição de eventos. A Esper é utilizada por meio de bibliotecas próprias. As funções oferecidas pelas bibliotecas são usadas na definição, detecção e resposta dos eventos detectados. A Esper tem uma versão com suporte a escalabilidade horizontal e balanceamento de carga, porém essa versão é de código fechado~\citep{ESPERMatrix}.
+A Esper\footnote{\url{http://www.espertech.com/esper}} é uma das ferramentas de CEP que oferecem linguagens orientadas a fluxo para a definição de eventos. A Esper é utilizada por meio de bibliotecas próprias. As funções oferecidas pelas bibliotecas são usadas na definição, detecção e resposta dos eventos detectados. A Esper tem uma versão com suporte a escalabilidade horizontal e balanceamento de carga, porém essa versão é de código fechado\footnote{\url{http://www.espertech.com/esper-enterprise-edition}}.
 
 O Siddhi CEP é o motor de processamento de eventos usado
 %pelo WSO2 Complex Event Processor
 por duas ferramentas distintas: WSO2 Complex Event Processor e WSO2 Stream Processor~\citep{WSO2vsSiddhi}.
-O WSO2 Complex Event Processor \citep{WSO2CEP} utiliza oficialmente  Apache Storm para distribuir o processamento de eventos. A Apache~\cite{Storm} é uma ferramenta de processamento de fluxos de dados contínuos que opera em ambientes distribuídos. Ela utiliza grafos dirigidos acíclicos para representar os fluxos de dados, onde cada nó representa uma operação e cada aresta, um caminho que o dado deve percorrer. A Apache Storm é usada juntamente com ferramentas de CEP para distribuir o processamento de eventos, com as ferramentas de CEP sendo usadas nos nós. Uma grande desvantagem de uso da Apache Storm é que qualquer reorganização na topologia do grafo requer que todo o sistema seja parado para a implementação de mudanças, ou seja, sempre que o sistema é reorganizado, os estados dos operadores são perdidos. Portanto, a distribuição não é dinâmica.
+O WSO2 Complex Event Processor\footnote{\url{ https://docs.wso2.com/display/CEP420}}  utiliza oficialmente  Apache Storm para distribuir o processamento de eventos. A Apache Storm\footnote{\url{https://storm.apache.org}} é uma ferramenta de processamento de fluxos de dados contínuos que opera em ambientes distribuídos. Ela utiliza grafos dirigidos acíclicos para representar os fluxos de dados, onde cada nó representa uma operação e cada aresta, um caminho que o dado deve percorrer. A Apache Storm é usada juntamente com ferramentas de CEP para distribuir o processamento de eventos, com as ferramentas de CEP sendo usadas nos nós. Uma grande desvantagem de uso da Apache Storm é que qualquer reorganização na topologia do grafo requer que todo o sistema seja parado para a implementação de mudanças, ou seja, sempre que o sistema é reorganizado, os estados dos operadores são perdidos. Portanto, a distribuição não é dinâmica.
 
-O WSO Stream Processor \citep{WSO2SP}, por sua vez, tem recursos nativos para a execução de um sistema com várias instâncias de processamento. Ele utiliza uma arquitetura orquestrada para coordenar a alocação de eventos, com a ferramenta de mensagens Apache \cite{Kafka} para comunicação assíncrona entre instâncias e o banco de dados MySQL para armazenar metadados dos tipos de eventos. O WSO Stream Processor usa anotações feitas pelo usuário na definição dos tipos de eventos para decidir como distribuir e paralelizar o processamento dos eventos. Essa abordagem pode levar a desperdício de recursos, visto que o usuário tem que saber sobre o funcionamento interno do sistema para configurar uma boa distribuição do processamento de eventos.
+O WSO Stream Processor\footnote{\url{https://docs.wso2.com/display/SP410}}, por sua vez, tem recursos nativos para a execução de um sistema com várias instâncias de processamento. Ele utiliza uma arquitetura orquestrada para coordenar a alocação de eventos, com a ferramenta de mensagens Apache Kafka\footnote{\url{https://kafka.apache.org}}  para comunicação assíncrona entre instâncias e o banco de dados MySQL para armazenar metadados dos tipos de eventos. O WSO Stream Processor usa anotações feitas pelo usuário na definição dos tipos de eventos para decidir como distribuir e paralelizar o processamento dos eventos. Essa abordagem pode levar a desperdício de recursos, visto que o usuário tem que saber sobre o funcionamento interno do sistema para configurar uma boa distribuição do processamento de eventos.
 
 
 
@@ -528,7 +528,7 @@ O WSO Stream Processor \citep{WSO2SP}, por sua vez, tem recursos nativos para a 
 \section{Isolamento de Ambiente e Processamento em Nuvem}\index{Cloud Tools}
 \label{sec:cloudtools}
 
-Para executar as ferramentas de CEP em plataformas de computação em nuvem, o uso de provedores de nuvem é necessário. Serviços de computação em nuvem, como o Google Cloud Platform - \cite{GCP}, o Microsoft Azure - \cite{Azure} e o Amazon Web Services - \cite{AWS}), são definidos como um modelo para permissão de acesso sob-demanda e configurável de recursos computacionais, que podem ser provisionados ou descartados rapidamente~\citep{CLoudComputing}. 
+Para executar as ferramentas de CEP em plataformas de computação em nuvem, o uso de provedores de nuvem é necessário. Serviços de computação em nuvem, como o Google Cloud Platform - GCP, o Microsoft Azure - Azure e o Amazon Web Services - AWS )\footnote{\url{https://cloud.google.com/},  \url{https://aws.amazon.com/}, \url{https://azure.microsoft.com/}}, são definidos como um modelo para permissão de acesso sob-demanda e configurável de recursos computacionais, que podem ser provisionados ou descartados rapidamente~\citep{CLoudComputing}. 
 
 
 
@@ -554,7 +554,7 @@ Atualmente dois tipos de técnicas se destacam para garantir esse isolamento:
 
 O uso de máquinas virtuais gasta mais recursos do sistema simplesmente por ter que rodar todo um outro sistema operacional sobre o da máquina hospedeira. Em comparação, a instanciação de contêineres em um máquina hospedeira gasta bem menos recursos e garante o mesmo nível de isolamento. De acordo com  \cite{7095802}, os contêineres podem atingir e até superar o desempenho de máquinas virtuais em relação a economia do uso de CPU e memória RAM. %\todo{desempenho em termos do que? velocidade? Essa última frase está estranha, o "qualquer em ocasião" não faz sentido nela.}.
 
-Para fazer a interface entre o desenvolvedor de contêineres e os recursos disponíveis na nuvem, existem vários tipos de sistemas de gerenciamento dinâmico de recursos, chamados de serviços de orquestração de contêineres~\citep{Kubernetes,Mesos,Swarm}. Esses sistemas fornecem várias operações que facilitam a administração das aplicações, sendo algumas delas:
+Para fazer a interface entre o desenvolvedor de contêineres e os recursos disponíveis na nuvem, existem vários tipos de sistemas de gerenciamento dinâmico de recursos, chamados de serviços de orquestração de contêineres (como Apache Mesos, Kubernetes e Docker Swarm.)\footnote{\url{https://mesos.apache.org}, \url{ https://kuberetes.io}, \url{https://docs.docker.com/engine/swarm/}}. Esses sistemas fornecem várias operações que facilitam a administração das aplicações, sendo algumas delas:
 \begin{itemize}
     \item Fácil visualização de \textit{logs} e descrição do uso de recursos de cada contêiner.
     \item Configuração individual do uso de recursos por cada contêiner.
