--- a/cap-conclusoes.tex
+++ b/cap-conclusoes.tex
@@ -24,7 +24,7 @@ A auto-escalabilidade e a tolerância a falhas proveem o processamento de evento
 
 A partir da pesquisa de trabalhos relacionados a distribuição de processamento de eventos complexos, detalhada no Capítulo \ref{cap:trabalhos}, dois algoritmos de balanceamento de carga foram criados para o \texttt{CEP Handler}. Esses algoritmos definem a ordem de realocação dos tipos de evento de um nó de processamento para outro. Um dos algoritmos seleciona o tipo de evento a ser realocado a partir do tempo necessário para reconstruir seu estado em outro nó de processamento. O outro algoritmo seleciona o tipo de evento a ser realocado considerando a similaridade entre os seus tipos de entrada e os tipos de entrada dos demais tipos processados no mesmo nó, tentando manter agrupados num mesmo nó os tipos que compartilham os mesmos tipos de entrada, minimizando assim a duplicação na transmissão de eventos para os nós de processamento do sistema.
 
-Para avaliar a arquitetura proposta, foi construído um protótipo dela utilizando somente ferramentas de \textit{software} livre, como visto no Capítulo \ref{cap:prototype}. O protótipo foi implementado como uma extensão da plataforma de software livre para cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}.
+Para avaliar a arquitetura proposta, foi construído um protótipo dela utilizando somente ferramentas de \textit{software} livre, como visto no Capítulo \ref{cap:prototype}. O protótipo foi implementado como uma extensão da plataforma de software livre para cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes\footnote{\url{https://interscity.org/}}.
 
 
 
