--- a/cap-introducao.tex
+++ b/cap-introducao.tex
@@ -24,7 +24,7 @@ Ao longo dos últimos anos, o conceito de Cidades Inteligentes vem ganhando popu
 
 Os investimentos feitos em infraestrutura física estão usualmente associados à implementação de tecnologias da informação e comunicação nos diferentes setores de uma cidade (transporte, saúde, educação, comércio, etc.), feita por meio de dispositivos eletrônicos, como sensores e atuadores. 
 O uso desses sensores gera uma grande quantidade de dados a todo momento, com os quais é possível melhorar a gestão da cidade, aprimorar os serviços públicos e privados ou oferecer novos serviços.
-Exemplo disso são os sensores da frota de ônibus do sistema de transporte público da cidade de São Paulo, SP.  Eles geram cerca de dez mil registros de dados por minuto sobre posições de ônibus.  Esses dados são coletados pela São Paulo Transporte S/A (SPTrans), empresa que administra o transporte público por ônibus da cidade, e disponibilizados publicamente por meio do site \cite{Olhovivo}, permitindo que os cidadãos melhor planejem suas viagens.
+Exemplo disso são os sensores da frota de ônibus do sistema de transporte público da cidade de São Paulo, SP.  Eles geram cerca de dez mil registros de dados por minuto sobre posições de ônibus.  Esses dados são coletados pela São Paulo Transporte S/A (SPTrans), empresa que administra o transporte público por ônibus da cidade, e disponibilizados publicamente por meio do site Olhovivo\footnote{\url{http://olhovivo.sptrans.com.br}}, permitindo que os cidadãos melhor planejem suas viagens.
 
 %Tem-se um exemplo disso na São Paulo Transporte S/A (SPTrans), empresa que administra o transporte público por ônibus da cidade de São Paulo, SP, que possui sensores em toda a sua frota de ônibus e gera cerca de dez mil registros de dados por minuto sobre posições de ônibus. %Esses enviam dados sobre a posição dos ônibus em tempo real, e 
 %Tais informações são disponibilizadas publicamente por meio do site \cite{Olhovivo}, permitindo que os cidadãos melhor planejem suas viagens.
@@ -73,7 +73,7 @@ Sistemas de processamento de dados em tempo real para Cidades Inteligentes preci
 %. Uma abordagem que muitas organizações estão adotando atualmente é o uso de computação em nuvem, onde aluga-se recursos computacionais de um provedor de nuvem de acordo com a quantidade de recursos e tempo de uso. Este tipo de abordagem para aquisição de infraestrutura de ambientes de execução permite que somente a quantidade necessária de recursos em cada momento seja adquirida, reduzindo custos com sub-utilização de máquinas e manutenção física.
 
 
-As solução de software livre de CEP disponíveis na atualidade~\citep{Esper,DroolsFusion,WSO2CEP} %(e.g., \todo{Incluir aqui a citação a essas ferramentas})  
+As solução de software livre de CEP disponíveis na atualidade\footnote{ \url{http://esper.espertech.com/},  \url{http://www.drools.org/},  \url{https://docs.wso2.com/display/CEP420}} %(e.g., \todo{Incluir aqui a citação a essas ferramentas})  
 não oferecem suporte nativo para a execução em ambientes de nuvem, ou mesmo distribuídos.
 %As solução atuais de software livre de CEP  (e.g., \todo{Incluir aqui a citação a essas ferramentas}) não oferecem nativamente mecanismos de distribuição e auto-escalabilidade\todo{Nenhuma das ferramentas faz CEP distribuído? Não ter distribuição é uma coisa, não ter auto-escalabilidade é outra coisa diferente. As ferramentas não têm nenhuma das duas coisas? O resumo fala sobre as ferramentas não terem suporte nativo para a execução na nuvem. O resumo e a introdução precisam falar a mesma coisa.}. 
 Mas há muita pesquisa na área de distribuição de processamento de eventos e, em particular, de métodos de balanceamento da carga de trabalho nos nós do sistema. Trabalhos como os de~\cite{Isoyama:2012:SCE:2335484.2335498}, \cite{6906776} e \cite{Balkesen:2013:RRI:2488222.2488257} propuseram diferentes tipos de abordagens para tratar esse problema. As principais técnicas já apresentadas
@@ -152,7 +152,7 @@ Com base em trabalhos relacionados, foram  criados dois algoritmos para o balanc
 %Um experimento foi realizado para avaliar o desempenho do sistema implementado em relação a sua auto-escalabilidade em situação de sobrecarga. 
 %\todo[inline]{O que está no parágrafo abaixo, eu copiei do resumo e colei aqui, para você complementar com mais detalhes. Você precisa apresentar um pouco mais de detalhes sobre o experimento, dizer que ele é uma rede para detecção de problemas comuns no tráfego de ônibus de grandes cidades, falar quais métricas de desempenho foram consideradas (latência, vazão, tempo de uso de recursos, etc.), sumariar os principais resultados observados e o que se concluiu deles. O capítulo de introdução precisa dar uma visão completa do que foi feito no trabalho e de seus principais resultados. Você já tem tudo isso escrito no cap. de Conclusões. Basta pegar de lá e abstrair/resumir um pouco para colocar aqui. }
  
-Um protótipo da arquitetura \texttt{CEP Handler} foi implementado, utilizando somente ferramentas de software livre, integrado à plataforma de cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}. O INCT da Internet do Futuro para Cidades Inteligentes é financiado por CNPq (proc. 465446/2014-0), Coordenação de Aperfeiçoamento de Pessoal de Nível Superior – Brasil (CAPES) – Código de Financiamento 001 e FAPESP (procs. 14/50937-1 e 15/24485-9). 
+Um protótipo da arquitetura \texttt{CEP Handler} foi implementado, utilizando somente ferramentas de software livre, integrado à plataforma de cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes\footnote{\url{https://interscity.org/}}. O INCT da Internet do Futuro para Cidades Inteligentes é financiado por CNPq (proc. 465446/2014-0), Coordenação de Aperfeiçoamento de Pessoal de Nível Superior – Brasil (CAPES) – Código de Financiamento 001 e FAPESP (procs. 14/50937-1 e 15/24485-9). 
 
 
 
