--- a/cap-resultados.tex
+++ b/cap-resultados.tex
@@ -247,7 +247,7 @@ Como mostra a Figura~\ref{fig:workers_and_events_SU}, em todas as cinco repetiç
   \caption{Execução 5}
   \label{fig:cewh-10-dez-is}
 \end{subfigure}
-\caption{Número de eventos entrando no sistema (vermelho)  e número de instâncias de \texttt{CEP Worker} (em azul) em função do horário do dia nas  execuções do experimento utilizando o algoritmo de balanceamento de carga por Similaridade de Entrada}
+\caption{Número de eventos entrando no sistema (vermelho)  e número de instâncias de \texttt{CEP Worker} (em azul) em função do horário do dia nas  execuções do experimento utilizando o algoritmo de balanceamento de carga por Similaridade de Entrada.}
 \label{fig:load_and_instances-time-IS}
 %\todo[inline]{Assim como comentei para o gráfico 7.4, aqui você precisa fixar os eixos y azuis, para possibilitar a comparação visual entre as execuções. }
 \end{figure}
@@ -658,7 +658,7 @@ Cada uma das figuras de \ref{fig:boxplot_vf_agg_1} a \ref{fig:boxplot_BusB_agg} 
 \caption{Tipos de evento \textbf{BusB}}
 \label{fig:BoxPlot_BusB_IS_7-dez-is-r}
 \end{subfigure}%
-\caption{Diagramas de caixa das latências por intervalos de cinco minutos ao longo da execução 2 do experimento utilizando o algoritmo de balanceamento de carga por Similaridade de Entrada.}
+\caption{Latências das categorias de tipos de evento por intervalos de cinco minutos ao longo da execução 2 do experimento utilizando o algoritmo de balanceamento de carga por Similaridade de Entrada.}
 \label{fig:BoxPlot_IS_7-dez-is-r}
 \end{figure}
 
