--- a/cap-trabalhos.tex
+++ b/cap-trabalhos.tex
@@ -134,9 +134,9 @@ O uso de CEP em dispositivos IoT, não só para sensoreamento mas também para p
 \cite{10.1145/3401025.3401731} discutiram a criação de um sistema de orquestração de Funções-como-Serviço (FaaS, do inglês \textit{Function-as-a-Service}) que atenda as demandas da comunidade de CEP e de outras comunidades que lidam com processamento de dados contínuos. Apesar de um grande esforço ter sido feito para criar sistemas usando as tecnologias de código aberto mais atuais de FaaS, não foi discutida a implementação ou suporte aos operadores de CEP. %\cite{10.1145/2830013.2830016}, \cite{10.1007/978-3-662-44879-3_7} e \cite{kritikos2019multi} mencionam o uso de CEP para realizar as mesmas funções que um sistema de FaaS oferece\todo{Não entendi direito o que essa última frase quer dizer, do que se trata esse 3 últimos trabalhos citados}. 
 %A comparação de CEP com FaaS é discutida na Seção \ref{sub-sec:Faas}.
 
-Funções-como-Serviço são um tipo de serviço oferecido pela maioria dos provedores de nuvem. Em FaaS, o desenvolvedor escreve o código e especifica suas dependências e é responsabilidade do provedor instanciar e administrar a infraestrutura para a execução do código e expor os serviços oferecidos, ou seja, toda a infraestrutura da operação é de responsabilidade do provedor de nuvem~\citep{garrison2017cloud}. Esse tipo de serviço permite que desenvolvedores escrevam pequenos trechos de código para serem disparados assim que um \textit{web-hook} for acionado ou alguma outra situação for detectada. Apesar de conseguir realizar muitas das funções que CEP oferece, os objetivos e principais usos das FaaS são bem distintos. Como o usuário de FaaS utiliza linguagens de programação para definir o processamento a ser feito, a chegada de um novo evento pode servir para o disparo da realização de vários tipos de ações, como a criação ou remoção de outros processamentos de FaaS, o processamento em lote de algum conjunto de dados ou até a instanciação de novos sistemas no provedor de nuvem. Apesar da grande variedade de operações disponíveis, os serviços de FaaS oferecidos nativamente pelo provedores têm um custo mais alto de uso, que é cobrado pelo tempo de execução do trecho de código, e também são limitados em relação ao tempo de processamento que uma função de FaaS pode continuar em execução~\citep{AWSLambda,AzureCloudServices,GoogleAppEngine}.
+Funções-como-Serviço são um tipo de serviço oferecido pela maioria dos provedores de nuvem. Em FaaS, o desenvolvedor escreve o código e especifica suas dependências e é responsabilidade do provedor instanciar e administrar a infraestrutura para a execução do código e expor os serviços oferecidos, ou seja, toda a infraestrutura da operação é de responsabilidade do provedor de nuvem~\citep{garrison2017cloud}. Esse tipo de serviço permite que desenvolvedores escrevam pequenos trechos de código para serem disparados assim que um \textit{web-hook} for acionado ou alguma outra situação for detectada. Apesar de conseguir realizar muitas das funções que CEP oferece, os objetivos e principais usos das FaaS são bem distintos. Como o usuário de FaaS utiliza linguagens de programação para definir o processamento a ser feito, a chegada de um novo evento pode servir para o disparo da realização de vários tipos de ações, como a criação ou remoção de outros processamentos de FaaS, o processamento em lote de algum conjunto de dados ou até a instanciação de novos sistemas no provedor de nuvem. Apesar da grande variedade de operações disponíveis, os serviços de FaaS oferecidos nativamente pelo provedores têm um custo mais alto de uso, que é cobrado pelo tempo de execução do trecho de código, e também são limitados em relação ao tempo de processamento que uma função de FaaS pode continuar em execução\footnote{AWSLambda : \url{https://aws.amazon.com/pt/lambda}, AzureCloudServices : \url{https://azure.microsoft.com/en-us/services/cloud-services/}, GoogleAppEngine: \url{https://cloud.google.com/appengine}}.
 
-Para a detecção contínua e constante de eventos, o uso da nuvem para a execução de serviços de CEP resulta em uma economia financeira quanto mais eventos são processados. Apesar de existirem serviços de FaaS de código aberto desenvolvidos para prover as mesmas funcionalidades que os serviços proprietários dos provedores de nuvens~\citep{Knative,Kubeless,OpenFaaS,Serverless}, eles não oferecem uma linguagem de CEP, com operadores próprios para a definição de tipos de evento desenvolvidos especificamente para o processamento de dados em tempo real.
+Para a detecção contínua e constante de eventos, o uso da nuvem para a execução de serviços de CEP resulta em uma economia financeira quanto mais eventos são processados. Apesar de existirem serviços de FaaS de código aberto desenvolvidos para prover as mesmas funcionalidades que os serviços proprietários dos provedores de nuvens\footnote{Knative: \url{https://knative.dev/}, Kubeless: \url{https://kubeless.io/} , OpenFaaS: \url{https://www.openfaas.com}, Serverless: \url{https://www.serverless.com}}, eles não oferecem uma linguagem de CEP, com operadores próprios para a definição de tipos de evento desenvolvidos especificamente para o processamento de dados em tempo real.
 
 
 
